# ROSSTARS

./: CMakeLists.txt  curriculo.html  rAthena.sln
Warp2025-main/Inputs/: DLLSpec.yml
Warp2025-main/Scripts/Patches/: CustomPath.qjs
a/: .env.example  DEPLOY-SITE-PRINCIPAL.txt  package-lock.json  tailwind.config.ts  vite.config.ts
a/public/: .htaccess
a/public/Icones Habilidades/: LEIA-ME.txt
a/public/data/: skills.json
a/src/: App.tsx  index.css
a/src/components/: JobSprite.tsx  Navbar.tsx  PlayerSkills.tsx  RankBadge.tsx  SkillIcon.tsx  StatsCard.tsx
a/src/context/: SkillsMetaContext.tsx
a/src/data/: jobIds.ts  jobs.ts  mockData.ts
a/src/hooks/: useRankingQuery.ts
a/src/lib/: api.ts  format.ts  guildUi.ts  playerSkills.ts  skillsMeta.ts
a/src/pages/: GuildsPage.tsx  Index.tsx  LoginPage.tsx  MatchPage.tsx  MatchesPage.tsx  PlayerPage.tsx  RankingPage.tsx
api/: .htaccess  README.md  arenas.php  config.local.php  db.php  guilds.php  match.php  player.php  ranking.php
client_plugins/rostars_hud/: README.md  rostars_hud.def  rostars_hud.sln  rostars_hud.vcxproj
client_plugins/rostars_hud/designer/: rostars_fps_ping_hud.json  rostars_hud_bg_survived.json
client_plugins/rostars_hud/src/: d3d9_hook.cpp  d3d9_hook.hpp  dllmain.cpp  hud.cpp  hud.hpp  net_sniff.cpp  net_sniff.hpp
conf/: char_athena.conf  inter_athena.conf  login_athena.conf  map_athena.conf  maps_athena.conf  subnet_athena.conf
conf/battle/: battleground.conf  client.conf  guild.conf  items.conf  player.conf  skill.conf
db/: map_index.txt
db/pre-re/: skill_db.yml  status.yml
db/re/: item_combos.yml  item_db_etc.yml  item_db_usable.yml  job_aspd.yml  skill_db.yml  status.yml
npc/: scripts_custom.conf
npc/custom/ROS2026/: Arenasdetreino.txt  Armaduras.txt  Armas.txt  Cartas.txt  Classes.txt  Consu.txt  Estilista.txt  Mercado.txt  Refinador.txt  Reparador.txt  arena_bot_shura_1v1.txt  arena_treino_saida.txt  dummys.txt  entrega.txt  flags.txt  healer.txt  logout.txt  montarias.txt  plagio.txt  potador.txt  resetadora.txt  runas.txt  wall.txt
npc/custom/funcs/: func1.txt  getitem.txt
npc/re/: scripts_athena.conf
rocalc-mirror/: atualizar-mirror.ps1  comparativo-aspd-rocalc-vs-rathena-v2-para-Excel.csv  comparativo-aspd-rocalc-vs-rathena.csv  comparativo-aspd-rocalc-vs-rathena.xls  main.C6M37RA5.js  onde-esta-a-formula.txt  styles.W7PT3K3A.css
sql-files/: arena_toyfactory_battleground.sql  dietestes_accounts_1_to_15.sql  item_db_re_equip.sql  item_db_re_usable.sql
sql-files/upgrades/: upgrade_20260401_guild_emblem_files.sql
src/char/: char.cpp  int_guild.cpp
src/map/: CMakeLists.txt  atcommand.cpp  battle.cpp  battle.hpp  clif.cpp  clif.hpp  clif_packetdb.hpp  elemental.cpp  mail.cpp  map-server-generator.vcxproj  map-server.vcxproj  map.cpp  mob.cpp  mob.hpp  path.cpp  path.hpp  pc.cpp  pc.hpp  script.cpp  skill.cpp  skill.hpp  status.cpp  unit.cpp  unit.hpp
src/web/: emblem_controller.cpp
tools/rostars_bg_overlay/: CMakeLists.txt  main.cpp  rostars_bg_overlay.vcxproj  rostars_overlay.ini.sample  rostars_player_build.hpp  session_file_for_client.txt
(+17 files in other folders)
